package org.oldjopa.tpo1.task3;

public interface Observer {
    void notify(Observation observation);
}